# Audio-XAI

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  justfile  pyproject.toml  requirements.txt  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  zizmor.yml
CHANGELOG/: 0.0.1.md
audio_xai/: __main__.py  cli.py  config.py  dataset.py  features.py  plots.py  utils.py
audio_xai/attack/: __init__.py  perceptual_xai_attack.py
audio_xai/attacks/: perceptual_xai_attack.py
audio_xai/data/: sonics.py
audio_xai/features/: __init__.py  dpam.py
audio_xai/fetching_and_metrics/: distr_metrics.py  fetch_songs.py  fetch_speech.py  peaq_implementation.py  preprocessing_metrics.py
audio_xai/metrics/: __init__.py  dpam.py  psychoacoustic.py  visqol.py
audio_xai/modeling/: __init__.py  predict.py  train.py
audio_xai/models/: __init__.py  ast_binary.py  base.py  lit_module.py  vggish_binary.py
audio_xai/models/dpam/: models.py
audio_xai/xai/: gradcam.py
docs/: api.md  index.md  installation.md  usage.md
scripts/: predict.py  run_experiment.py  sonics_attack_test.py  train_classifier.py
src/audio_xai/: README.md  __init__.py  features.py
src/audio_xai/modeling/: predict.py
src/audio_xai/models/: __init__.py  resnet.py  spectra.py  vit.py
tests/: test_attack_smoke.py  test_audio_xai.py  test_models.py
