[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Audio-XAI"
version = "0.0.1"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.md"
authors = [
  {name = "Piotr Kitłowski", email = "piotr.kitlowski@gmail.com"},
  {name = "Dominik Wiącek", email = "dominiq.wiacek@gmail.com"},
]
maintainers = [
  {name = "Piotr Kitłowski", email = "piotr.kitlowski@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
license = {text = "MIT"}
dependencies = [
  "pre-commit",
  "ipython",
  "jupyterlab",
  "loguru",
  "matplotlib",
  "mkdocs",
  "notebook",
  "numpy",
  "pandas",
  "pip",
  "pytest",
  "python-dotenv",
  "scikit-learn",
  "tqdm",
  "typer",
  "rich",
  "tensorboard",
  "torch",
  "torchvision",
  "torchaudio",
  "yt_dlp",
  "librosa",
  "soundfile",
  "pystoi",
  "pesq",
  "zimtohrli==0.2.1.post1",
]
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff>=0.11.7",
    "pre-commit>=4.5.1",
]
test = [
    "coverage",
    "pytest",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/cncPomper/Audio-XAI/issues"
changelog = "https://github.com/cncPomper/Audio-XAI/releases"
documentation = "https://cncPomper.github.io/Audio-XAI/"
homepage = "https://github.com/cncPomper/Audio-XAI"

[project.scripts]
audio_xai = "audio_xai.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.coverage.run]
branch = true
parallel = true
source = ["audio_xai/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
default-groups = ["dev"]
