[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Audio-XAI"
version = "0.0.1"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.md"
authors = [
  {name = "Piotr Kitłowski", email = "piotr.kitlowski@gmail.com"},
  {name = "Dominik Wiącek", email = "dominiq.wiacek@gmail.com"},
]
maintainers = [
  {name = "Piotr Kitłowski", email = "piotr.kitlowski@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
license = {text = "MIT"}
dependencies = [
  "pre-commit",
  "ipython",
  "jupyterlab",
  "loguru",
  "matplotlib",
  "mkdocs",
  "notebook",
  "numpy",
  "pandas",
  "pip",
  "pytest",
  "python-dotenv",
  "scikit-learn",
  "tqdm",
  "typer",
  "rich",
  "tensorboard",
  "torch",
  "torchvision",
  "torchaudio",
  "torchmetrics",
  "yt_dlp",
  "librosa",
  "soundfile",
  "pystoi",
  "pesq",
  "audio-metrics",
  "zimtohrli==0.2.1.post1",
  "datasets>=2.14.0,<3.0.0",
  "torchmetrics[audio]",
  "pymcd",
  "cdpam",
  "scipy",
  "resampy",


]
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff>=0.11.7",
    "pre-commit>=4.5.1",
]
test = [
    "coverage",
    "pytest",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/cncPomper/Audio-XAI/issues"
changelog = "https://github.com/cncPomper/Audio-XAI/releases"
documentation = "https://cncPomper.github.io/Audio-XAI/"
homepage = "https://github.com/cncPomper/Audio-XAI"

[project.scripts]
audio_xai = "audio_xai.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 150

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "D",    # pydocstyle (highly recommended for docstring consistency)
]

[tool.ruff.lint.per-file-ignores]
# Ignore docstring requirements in test files and script-like directories
"tests/**/*.py" = ["D"]
# fetching_and_metrics/ contains standalone data-collection scripts with mixed-language comments
"audio_xai/fetching_and_metrics/**/*.py" = ["D"]
# modeling/ contains boilerplate placeholder commands
"audio_xai/modeling/**/*.py" = ["D"]
# plots.py is a boilerplate placeholder command
"audio_xai/plots.py" = ["D"]
# scripts/ contains standalone training/utility entry points
"scripts/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google" # or "numpy" / "pep257"

[tool.coverage.run]
branch = true
parallel = true
source = ["audio_xai/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
default-groups = ["dev"]
